Primera version app

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <section id="page-public">
     
   </section>
-  <section id="user-page">
+  <section id="user-panel">
     
   </section>
   <section id="user-page-fav">
