Se agrega navbar y buscador

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="page-public" class="container">
     
     </section>
-    <section id="page-user">
+    <section id="page-user" class="container">
     <!-- Logueado -->
       <form action="">
         <input type="search" id="search">
@@ -46,7 +46,7 @@
     <!-- Axios -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/main.js">  </script>
+  <script src="assets/js/main.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
 </html>
