--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <div id="container">
 
       </div>
+      <div id="container2">
+
+      </div>
     </section>
     <section id="page-user-fav">
     </section>
