Cambiando estilo de inicio sin login

--- a/index.html
+++ b/index.html
@@ -26,23 +26,30 @@
           <li><a href="#">Page 3</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class=""></span> Sign Up</a></li>
+          <li><a href="#"><span class=""></span>Sign Up</a></li>
           <li><a href="#"><span class=""></span>Login</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <header class="logo hidden-xs"></header>
+  <header class="hidden-xs"><img src="assets/img/logo.png" alt=""></header>
 
   <main>
     <section id="page-public" class="container-fluid">
-    
+    <div class="row">
+      <div class="col-md-4"><div class="icon"><i class="fas fa-glass-martini"></i><h3 class="title text-uppercase">Descubre</h3></div></div>
+      <div class="col-md-4"><div class="icon"></div></div>
+      <div class="col-md-4"><div class="icon"></div></div>
+    </div>
+
     </section>
     <!-- Logueado -->
     <section id="page-user" class="container-fluid">
     <div class="row">
       <form action="">
         <input type="search" id="search">
+        <input type="radio" name="gender" value="c">Categoría
+        <input type="radio" name="gender" value="i">Ingrediente
         <input type="submit" id="submit">
       </form>
       <!-- Resultados Busqueda -->
