--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <main>
     <section id="page-public" class="container-fluid">
     <div class="row">
-      <div class="col-md-4"><div class="icon"><i class="fas fa-glass-martini"></i><h3 class="title text-uppercase">Descubre</h3></div></div>
-      <div class="col-md-4"><div class="icon"></div></div>
-      <div class="col-md-4"><div class="icon"></div></div>
+      <div class="col-xs-4 col-md-4 text-center"><i class="fas fa-glass-martini"></i><h3 class="title text-uppercase">Descubre</h3></div>
+      <div class="col-xs-4 col-md-4 text-center"><i class="fas fa-glass-martini"></i></div>
+      <div class="col-xs-4 col-md-4 text-center"><i class="fas fa-glass-martini"></i></div>
     </div>
 
     </section>
