Modificando estilos vista usuario logeado

--- a/index.html
+++ b/index.html
@@ -32,26 +32,22 @@
       </div>
     </div>
   </nav>
-  <header class="hidden-xs"><img src="assets/img/logo.png" alt=""></header>
+  
 
   <main>
-    <section id="page-public" class="container-fluid">
-    <div class="row">
-      <div class="col-xs-4 col-md-4 text-center"><i class="fas fa-glass-martini"></i><h3 class="title text-uppercase">Descubre</h3></div>
-      <div class="col-xs-4 col-md-4 text-center"><i class="fas fa-glass-martini"></i></div>
-      <div class="col-xs-4 col-md-4 text-center"><i class="fas fa-glass-martini"></i></div>
-    </div>
-
-    </section>
     <!-- Logueado -->
+    <header class="col-xs-12"><img src="assets/img/logo.png" alt="" class="img-responsive img-center"></header>
     <section id="page-user" class="container-fluid">
     <div class="row">
-      <form action="">
+      <div class="col-xs-12 search-content">
+        <form action="">
         <input type="search" id="search">
         <input type="radio" name="gender" value="c">Categoría
         <input type="radio" name="gender" value="i">Ingrediente
         <input type="submit" id="submit">
       </form>
+      </div>
+      
       <!-- Resultados Busqueda -->
       <div id="results-search"></div>
       <div id="random-drink"></div>
