--- a/index-firebase.html
+++ b/index-firebase.html
@@ -37,10 +37,11 @@
   <main>
     
     <section id="page-public" class="container-fluid">
-    <div class="row">
       <header class="col-xs-12"><img src="assets/img/logo.png" alt="" class="img-responsive img-center"></header>
+    <div class="row">
+      
 
-      <div class="col-xs-12 col-sm-4 col-md-4 text-center ">
+      <div class="col-xs-12 col-sm-4 col-md-4 text-center content-flex">
         <div class="features-img feat-1">
 
         </div>
@@ -67,7 +68,7 @@
         </div>
       </div>
 
-      <div class="col-xs-12 col-sm-12"><button>Iniciar Sesion</button>button</div>
+      <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4"><button class="btn btn-register text-uppercase" id="register">Registrate</button></div>
     </section>
   </main>
   
