actualizando funcion de fav

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       <div class="col-xs-12 search-content">
         <form action="">
         <input type="search" id="search">
-        <input type="radio" name="gender" value="c">Categoría
+        <input type="radio" name="gender" value="c">Nombre
         <input type="radio" name="gender" value="i">Ingrediente
-        <input type="submit" id="submit">
+        <input type="submit" id="submit" name="Buscar">
       </form>
       </div>
       
@@ -52,6 +52,7 @@
       <div id="results-search"></div>
       <div id="random-drink"></div>
       
+      <div id="favoritos"></div>
 
       </div>
     </section>
