--- a/index-firebase.html
+++ b/index-firebase.html
@@ -50,7 +50,7 @@
   </nav>
   
 
-  <main>
+  <main id="show-pages">
     
     <section id="page-public" class="container-fluid">
       <header class="col-xs-12"><img src="assets/img/logo.png" alt="" class="img-responsive img-center"></header>
@@ -63,15 +63,15 @@
         </div>
         <div class="features">
           <h3 class="title text-uppercase">Descubre</h3>
-          <p>Comprar un Trago preparado puede ser muy caro. Con Drinktail solo tienes que dejarte sorprender por nuestras sugerencias de cocktail o usar el buscador de ingredientes para empezar a probar nuevas preparaciones. <b>¡Tenemos mas de 500 recetas y la lista va en aumento!</b></p>
+          <p>Comprar un Trago preparado puede ser muy caro. Con Drinktail solo tienes que dejarte sorprender por nuestras sugerencias o usa el buscador para probar nuevas preparaciones. <b>¡Tenemos más de 500 recetas y la lista va en aumento!</b></p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4 col-md-4 text-center ">
         <div class="features-img feat-2">
         </div>
         <div class="features">
-          <h3 class="title text-uppercase">¡Colecciona!</h3>
-          <p>¿Te gustó un trago de nuestra app y deseas guardar la receta?. Con Drinktail puedes crear una lista de favoritos y conservar todas esas preparaciones con las que deseas experimentar. ¡Nunca mas vas a perder la receta!</p>
+          <h3 class="title text-uppercase">Colecciona</h3>
+          <p>¿Te gustó un trago de nuestra app y deseas guardar la receta?. Con Drinktail puedes crear una lista de favoritos y conservar todas esas preparaciones con las que deseas experimentar. <b>¡Nunca más vas a perder la receta!</b></p>
         </div>
       </div>
       
@@ -80,11 +80,11 @@
         </div>
         <div class="features">
           <h3 class="title text-uppercase">¡Disfruta!</h3>
-          <p>Driktail es perfecta para una noche de amigos. Comparte deliciosos tragos y sorprende a tus seres queridos con una experiencia única. ¿Lo mejor de todo? <b>¡Es GRATIS!</b></p>
+          <p>Drinktail es perfecta para una noche de amigos. Comparte deliciosos tragos y sorprende a tus seres queridos con una experiencia única. <b>¿Lo mejor de todo? ¡Es GRATIS!</b></p>
         </div>
       </div>
 
-      <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4"><button class="btn btn-register text-uppercase submit_register">Registrate</button></div>
+      <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-4"><button class="btn btn-register text-uppercase" id="modalRegister2">Registrate</button></div>
     </section>
   </main>
   
@@ -133,13 +133,13 @@
                 <div class="content"> 
                   <form class="form-horizontal row">
                     <div class="form-group">
-                      <label class="control-label col-xs-offset-1 col-xs-2 col-md-offset-1 col-md-1"><i class="fa fa-user fa-lg" aria-hidden="true"></i></label>
+                      <label class="control-label col-xs-offset-1 col-xs-2 col-md-offset-1 col-md-1"><i class="fas fa-user fa-lg" aria-hidden="true"></i></label>
                       <div class="col-xs-8 col-md-8">
                         <input type="email" class="form-control input-box" id="email_login" placeholder="Correo Electrónico">
                       </div>
                     </div>
                   <div class="form-group">
-                    <label class="control-label col-xs-offset-1 col-xs-2 col-md-offset-1 col-md-1"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></label>
+                    <label class="control-label col-xs-offset-1 col-xs-2 col-md-offset-1 col-md-1"><i class="fas fa-lock fa-lg" aria-hidden="true"></i></label>
                     <div class="col-xs-8 col-md-8">          
                       <input type="password" class="form-control input-box" id="pwd_login" placeholder="Ingresa tu contraseña">
                     </div>
