--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <main>
     <!-- Logueado -->
-    <header class="col-xs-12"><img src="assets/img/logo.png" alt="" class="img-responsive img-center"></header>
+    <header><img src="assets/img/logo.png" alt="" class="img-responsive img-center"></header>
     <section id="page-user" class="container-fluid">
     <div class="row">
       <div class="col-xs-12 search-content">
