--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <div class="col-xs-12 search-content">
         <form action="">
         <input type="search" id="search">
-        <input type="radio" name="gender" value="c">Nombre
-        <input type="radio" name="gender" value="i">Ingrediente
+        <input type="radio" name="gender" id="name">Nombre
+        <input type="radio" name="gender" id="ing">Ingrediente
         <input type="submit" id="submit" name="Buscar">
       </form>
       </div>
