--- a/index-firebase.html
+++ b/index-firebase.html
@@ -42,8 +42,8 @@
           <li><a href="#">Page 3</a></li>  -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" class="submit_register" data-toggle="modal" data-target="#modalRegister"><span ></span>Registrate</a></li>
-          <li><a href="#" id="submit_login" data-toggle="modal" data-target="#modalLogin"><span></span>Iniciar Sesión</a></li>
+          <li><a href="#" class="submit_register text-uppercase" data-toggle="modal" data-target="#modalRegister"><span ></span>Registrate</a></li>
+          <li><a href="#" id="submit_login" data-toggle="modal" data-target="#modalLogin" class="text-uppercase"><span></span>Iniciar Sesión</a></li>
         </ul>
       </div>
     </div>
