--- a/index-firebase.html
+++ b/index-firebase.html
@@ -121,7 +121,9 @@
   </div>
   
   <!-- Fin Modal Registrarse-->
-  <!-- Modal Iniciar Sesión -->
+  
+  <script src="assets/js/jquery-3.3.1.min.js"></script>
+    <!-- Axios --<!-- Modal Iniciar Sesión -->
   <div class="modal fade" id="modalLogin" role="dialog">
           <div class="modal-dialog modal-md">
             <div class="modal-content login-color">
@@ -160,9 +162,7 @@
             </div>
           </div>
   </div>
-  <!-- Fin Modal Iniciar Sesión -->
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
-    <!-- Axios -->
+  <!-- Fin Modal Iniciar Sesión -->>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/main.js"></script>
