Se agrega mejoras version app vista login - registro

--- a/app.html
+++ b/app.html
@@ -59,15 +59,14 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-offset-1 col-md-10">
-        <div class="logo-header">
-          <img src="assets/img/feature-2.jpg" alt="" class="img-responsive">
-        </div>
-          <div class="row">
+
+        <div class="drinks-home"></div>
+          <div class="row buttons-home">
             <div class="col-xs-6">
-              <button class="btn btn-default btn-lg btn-transparent pull-right" data-toggle="modal" data-target="#modalLogin">Ingresa</button>
+              <button class="btn btn-default btn-lg btn-login" data-toggle="modal" data-target="#modalLogin">Ingresa</button>
             </div>
             <div class="col-xs-6">
-              <button class="btn btn-default btn-lg btn-transparent" data-toggle="modal" data-target="#modalRegister">Registrate</button>
+              <button class="btn btn-default btn-lg btn-register" data-toggle="modal" data-target="#modalRegister">Registrate</button>
           </div>
         </div>
       </div>
